--- a/views/index.html
+++ b/views/index.html
@@ -107,7 +107,11 @@
   </div>
 </body>
 <!-- jQuery -->
-<script src="../vendors/jquery/dist/jquery.min.js"></script>
+<script src="../vendors/jquery/dist/jquery.min.js"></script> 
+<!-- jQuery Cookie -->
+<script src="../js/js.cookie.js"></script>    
+<!-- Permit -->
+<script src="../js/permit.js"></script>
 <!-- PNotify -->
 <script src="../vendors/pnotify/dist/pnotify.js"></script>
 <script src="../vendors/pnotify/dist/pnotify.buttons.js"></script>
