--- a/views/home.html
+++ b/views/home.html
@@ -59,15 +59,18 @@
                                 General
                             </h3>
                             <ul class="nav side-menu">
-                                <li class="permit permit-Admin permit-STramites"><a href="admin.html" id="btnAdmin"><i class="fas fa-home"></i> Pagina principal </a>
+                                <li class="permit permit-Admin permit-STramites"><a href="admin.html" id="btnAdmin"><i
+                                            class="fas fa-home"></i> Pagina principal </a>
                                 </li>
-                                <li class="permit permit-Admin permit-AReportes"><a id="btnReportes"><i class="fas fa-table"></i> Reportes <span class="fas fa-caret-down"></span></a>
+                                <li class="permit permit-Admin permit-AReportes"><a id="btnReportes"><i class="fas fa-table"></i>
+                                        Reportes <span class="fas fa-caret-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="Reportes.html">Trámites</a></li>
                                         <li><a href="Reportes2.html">Transparecia</a></li>
                                     </ul>
                                 </li>
-                                <li class="permit permit-Admin permit-ARutas"><a href="MapeoRutas.html" id="btnMapeoRutas"><i class="fas fa-map-marked-alt"></i>
+                                <li class="permit permit-Admin permit-ARutas"><a href="MapeoRutas.html" id="btnMapeoRutas"><i
+                                            class="fas fa-map-marked-alt"></i>
                                         Mapeo Rutas
                                     </a>
                                 </li>
@@ -94,7 +97,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a aria-expanded="false" id="userName" class="user-profile dropdown-toggle" data-toggle="dropdown"
-                                    href="javascript:;">                                    
+                                    href="javascript:;">
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
                                     <li><a href="#" id="btnLogOut"><i class="fas fa-sign-out-alt"></i> Salir</a></li>
@@ -127,58 +130,10 @@
             <!-- /top navigation -->
             <!-- page content -->
             <div class="right_col" role="main">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h3>Estadisticas de trámites</h3>
-                    </div>
-                </div>
-                <div class="row" id="fila_item">
-                    <div class="col-md-12 col-sm-6 col-xs-12">
-                        <!--<button id="btn_getData" class="btn btn-info">Get Data</button>-->
-                        <div class="x_panel">
-                            <div class="x_content">
-                                <label for="rngDatePicker">
-                                    Selecciones el rango de fechas que deseé visualizar
-                                </label>
-                                <div id="rngDatePicker" class="control-group">
-                                    <div class="controls">
-                                        <div class="input-prepend input-group" style="width: 250px">
-                                            <input type="text" name="dateRangePicker" id="dateRangePicker" class="form-control"
-                                                placeholder="MM/DD/YYYY - MM/DD/YYYY" value="" />
-                                            <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div id="tramitesDia" class="G1">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div id="tramitesDiaUlt30" class="G2">
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="x_panel">
-                            <div class="x_content">
-                                <div>
-                                    <label for="myDatepicker2">
-                                        Seleccione la fecha que deseé visualizar
-                                    </label>
-                                    <div style="width: 250px" class='input-group date' id='myDatepicker2'>
-                                        <input type='text' id="datePicker" class="form-control" placeholder="DD/MM/YYYY" />
-                                        <span class="input-group-addon">
-                                            <span class="glyphicon glyphicon-calendar"></span>
-                                        </span>
-                                    </div>
-                                </div><br>
-                                <div id="traitesHorario" class="G3"></div>
-                            </div>
-                        </div>
-                    </div>
+                <div id="jumboHome" class="jumbotron">
+                    <h1 class="display-4">Bienvenido al tablero de monitoreo</h1>
+                    <hr class="my-4">
+                    <p>Secretaria de Comunicaciones y Transportes SLP</p>
                 </div>
             </div>
 
@@ -197,7 +152,7 @@
     <!-- jQuery -->
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
     <!-- jQuery Cookie -->
-    <script src="../js/js.cookie.js"></script>    
+    <script src="../js/js.cookie.js"></script>
     <!-- Permit -->
     <script src="../js/permit.js"></script>
     <!-- Bootstrap -->
@@ -244,7 +199,6 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="../js/comun.js"></script>
-    <script src="../js/ciatecCustom.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
