--- a/views/home.html
+++ b/views/home.html
@@ -192,11 +192,11 @@
     <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!-- bootstrap-datetimepicker -->
     <script src="../vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <!-- Highcarts -->
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/series-label.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <!-- Highcarts -->    
+    <script src="../js/highcharts/highcharts.js"></script>
+    <script src="../js/highcharts/series-label.js"></script>
+    <script src="../js/highcharts/exporting.js"></script>    
+    <script src="../js/highcharts/export-data.js"></script>  
     <!-- Custom Theme Scripts -->
     <script src="../js/comun.js"></script>
     <script src="../js/custom.js"></script>
