--- a/views/admin.html
+++ b/views/admin.html
@@ -243,7 +243,7 @@
     <script src="../js/highcharts/exporting.js"></script>    
     <script src="../js/highcharts/export-data.js"></script>        
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
+    <script src="../js/comun.min.js"></script>
     <script src="../js/ciatecCustom.js"></script>
     <script src="../js/custom.js"></script>
 </body>
