--- a/views/home.html
+++ b/views/home.html
@@ -198,7 +198,7 @@
     <script src="../js/highcharts/exporting.js"></script>    
     <script src="../js/highcharts/export-data.js"></script>  
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
+    <script src="../js/comun.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
