--- a/views/admin.html
+++ b/views/admin.html
@@ -244,7 +244,7 @@
     <script src="../js/highcharts/export-data.js"></script>        
     <!-- Custom Theme Scripts -->
     <script src="../js/comun.min.js"></script>
-    <script src="../js/ciatecCustom.js"></script>
+    <script src="../js/ciatecCustom.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
