--- a/views/MapeoRutas.html
+++ b/views/MapeoRutas.html
@@ -550,8 +550,8 @@
     <script src="../vendors/switchery/dist/switchery.min.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/MapeoRutas.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/MapeoRutas.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
