--- a/views/Reportes.html
+++ b/views/Reportes.html
@@ -267,8 +267,8 @@
     <script src="../vendors/datatables.net-buttons/js/buttons.html5.js"></script>
     <script src="../vendors/datatables.net-buttons/js/buttons.print.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/reportes.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/reportes.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
