--- a/views/Reportes2.html
+++ b/views/Reportes2.html
@@ -65,7 +65,7 @@
                                 General
                             </h3>
                             <ul class="nav side-menu">
-                                <li class="permit permit-Admin permit-STramites"><a href="admin.html" id="btnAdmin"><i class="fas fa-home"></i> Pagina principal </a>
+                                <li class="permit permit-Admin permit-STramites"><a href="admin.html" id="btnAdmin"><i class="fas fa-home"></i> Página principal </a>
                                 </li>
                                 <li class="permit permit-Admin permit-AReportes"><a id="btnReportes"><i class="fas fa-table"></i> Reportes <span class="fas fa-caret-down"></span></a>
                                     <ul class="nav child_menu">
@@ -73,7 +73,8 @@
                                         <li><a href="Reportes2.html">Transparencia</a></li>
                                     </ul>
                                 </li>
-                                <li class="permit permit-Admin permit-ARutas"><a href="MapeoRutas.html" id="btnMapeoRutas"><i class="fas fa-map-marked-alt"></i>
+                                <li class="permit permit-Admin permit-ARutas">
+                                    <a href="MapeoRutas.html" id="btnMapeoRutas"><i class="fas fa-map-marked-alt"></i>
                                         Mapeo Rutas
                                     </a>
                                 </li>
@@ -278,8 +279,8 @@
     <script src="../vendors/datatables.net-buttons/js/buttons.html5.js"></script>
     <script src="../vendors/datatables.net-buttons/js/buttons.print.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/reportes.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/reportes.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
