--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,7 @@
                             </h3>
                             <ul class="nav side-menu">
                                 <li class="permit permit-Admin permit-STramites"><a href="admin.html" id="btnAdmin"><i
-                                            class="fas fa-home"></i> Pagina principal </a>
+                                            class="fas fa-home"></i> Página principal </a>
                                 </li>
                                 <li class="permit permit-Admin permit-AReportes"><a id="btnReportes"><i class="fas fa-table"></i>
                                         Reportes <span class="fas fa-caret-down"></span></a>
@@ -73,6 +73,15 @@
                                             class="fas fa-map-marked-alt"></i>
                                         Mapeo Rutas
                                     </a>
+                                </li>
+                                <li class=""><a id="btnCatalogos"><i class="fas fa-book-open"></i>
+                                    Personas Juridicas <span class="fas fa-caret-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a id="repLeg" href="catalogoRepLeg.html">Representantes Legales</a></li>
+                                        <li><a id="tutor" href="catalogoTutor.html">Tutor</a></li>
+                                        <li><a id="albacea" href="catalogoTutor.html">Albacea</a></li>
+                                        <li><a id="beneficiario" href="catalogoBene.html">Beneficiarios</a></li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
