--- a/views/index.html
+++ b/views/index.html
@@ -116,6 +116,8 @@
 <script src="../vendors/pnotify/dist/pnotify.js"></script>
 <script src="../vendors/pnotify/dist/pnotify.buttons.js"></script>
 <script src="../vendors/pnotify/dist/pnotify.nonblock.js"></script>
+<!-- MD5 -->
+<script src="../js/md5.min.js"></script>
 
 
 <!-- Custom -->
